testing vscode intergration

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <!--Saving image from google (abs path)-->
         <img src="">
-
+        <!-- testing vscode setup-->
     </body>
 
 
