link css file and use 'div' element via ext method

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Recipes Project</title>
         <meta charset="UTF-8">
+        <!--EXTERAL CSS METHOD-->
+        <link rel="stylesheet" href ="styles.css">
+        <title>Recipes Project</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+         <!--Styled using EXTERAL CSS METHOD-->
+        <div><h1>Odin Recipes</h1></div>
+        <p></p>
+           
+        
         <!-- link too tacos.html which tacos anchor link--> 
         <!--Unordered list of recipes-->
         <ul>
