intergrating css methods on to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
     <head>
         <meta charset="UTF-8">
         <!--EXTERAL CSS METHOD-->
@@ -7,10 +7,21 @@
         <title>Recipes Project</title>
     </head>
 
+    <!--INTERNAL --CSS METHOD-->
+    <style>
+        p{background-color: green;
+        color: white;
+        font-size: 18px;
+        } 
+    </style>
+
     <body>
          <!--Styled using EXTERAL CSS METHOD-->
         <div><h1>Odin Recipes</h1></div>
-        <p></p>
+         <!--Styled using INTERNAL METHOD CSS METHOD-->
+        <p>Hungry?</p>
+          <!--Styled using INLINE METHOD CSS METHOD-->
+        <button style="background-color: orange; font-size: 18px;">Inline Method</button>
            
         
         <!-- link too tacos.html which tacos anchor link--> 
