adding class  identifier examples

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
         <!--Saving image from google (abs path)-->
         <img src="">
         <!-- testing vscode setup-->
+
+        <!--Using class identifiers -->
+        <p class="odd"> Number 1 - I'm a class, but clooer </p>
+        <div id="two"> Number 2 I'm one ID</div>
+        <p class="three">Number 3</p>
+        <p class="four">Number 4</p>
+        
     </body>
 
 
