--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         <div id="two"> Number 2 I'm one ID</div>
         <p class="three">Number 3</p>
         <p class="four">Number 4</p>
+        <!-- Grouping selectors -->
+        <button class="inverted">Click me!</button>
+        <button class="fancy">No click me!</button>
+        <!--Chaining selectors-->
+
         
     </body>
 
